add activity spec
