# swagger/v1/swagger.json
@@ -5,6 +5,374 @@
     "version": "v1"
   },
   "paths": {
+    "/api/groups/{id}/activities": {
+      "get": {
+        "summary": "Get all the Activities",
+        "tags": [
+          "Activities"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Activities found",
+            "schema": {
+              "type": "array",
+              "items": {
+                "properties": {
+                  "id": {
+                    "type": "integer",
+                    "example": 20
+                  },
+                  "lat": {
+                    "type": "string",
+                    "example": "johann@baton.com",
+                    "x-nullable": true
+                  },
+                  "long": {
+                    "type": "string",
+                    "example": "johann",
+                    "x-nullable": true
+                  },
+                  "additional_info": {
+                    "type": "string",
+                    "example": "johann",
+                    "x-nullable": true
+                  },
+                  "location": {
+                    "type": "string",
+                    "example": "West Hollywood",
+                    "x-nullable": true
+                  },
+                  "start_date": {
+                    "type": "string",
+                    "example": "West Hollywood",
+                    "x-nullable": true
+                  },
+                  "end_date": {
+                    "type": "string",
+                    "example": "West Hollywood",
+                    "x-nullable": true
+                  },
+                  "group_id": {
+                    "type": "integer",
+                    "example": 20
+                  },
+                  "description": {
+                    "type": "string",
+                    "example": "cool group",
+                    "x-nullable": true
+                  },
+                  "title": {
+                    "type": "string",
+                    "example": "http://www.example.com",
+                    "x-nullable": true
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "summary": "Create a new activity",
+        "tags": [
+          "Activities"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "activity_data",
+            "in": "body",
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "integer",
+                "example": 20
+              },
+              "lat": {
+                "type": "string",
+                "example": "johann@baton.com",
+                "x-nullable": true
+              },
+              "long": {
+                "type": "string",
+                "example": "johann",
+                "x-nullable": true
+              },
+              "additional_info": {
+                "type": "string",
+                "example": "johann",
+                "x-nullable": true
+              },
+              "location": {
+                "type": "string",
+                "example": "West Hollywood",
+                "x-nullable": true
+              },
+              "start_date": {
+                "type": "string",
+                "example": "West Hollywood",
+                "x-nullable": true
+              },
+              "end_date": {
+                "type": "string",
+                "example": "West Hollywood",
+                "x-nullable": true
+              },
+              "group_id": {
+                "type": "integer",
+                "example": 20
+              },
+              "description": {
+                "type": "string",
+                "example": "cool group",
+                "x-nullable": true
+              },
+              "title": {
+                "type": "string",
+                "example": "http://www.example.com",
+                "x-nullable": true
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Activity created",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer",
+                  "example": 20
+                },
+                "lat": {
+                  "type": "string",
+                  "example": "johann@baton.com",
+                  "x-nullable": true
+                },
+                "long": {
+                  "type": "string",
+                  "example": "johann",
+                  "x-nullable": true
+                },
+                "additional_info": {
+                  "type": "string",
+                  "example": "johann",
+                  "x-nullable": true
+                },
+                "location": {
+                  "type": "string",
+                  "example": "West Hollywood",
+                  "x-nullable": true
+                },
+                "start_date": {
+                  "type": "string",
+                  "example": "West Hollywood",
+                  "x-nullable": true
+                },
+                "end_date": {
+                  "type": "string",
+                  "example": "West Hollywood",
+                  "x-nullable": true
+                },
+                "group_id": {
+                  "type": "integer",
+                  "example": 20
+                },
+                "description": {
+                  "type": "string",
+                  "example": "cool group",
+                  "x-nullable": true
+                },
+                "title": {
+                  "type": "string",
+                  "example": "http://www.example.com",
+                  "x-nullable": true
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/groups/{id}/activities/{activity_id}": {
+      "patch": {
+        "summary": "Update an activity",
+        "tags": [
+          "Activities"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "activity_id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "activity_data",
+            "in": "body",
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "integer",
+                "example": 20
+              },
+              "lat": {
+                "type": "string",
+                "example": "johann@baton.com",
+                "x-nullable": true
+              },
+              "long": {
+                "type": "string",
+                "example": "johann",
+                "x-nullable": true
+              },
+              "additional_info": {
+                "type": "string",
+                "example": "johann",
+                "x-nullable": true
+              },
+              "location": {
+                "type": "string",
+                "example": "West Hollywood",
+                "x-nullable": true
+              },
+              "start_date": {
+                "type": "string",
+                "example": "West Hollywood",
+                "x-nullable": true
+              },
+              "end_date": {
+                "type": "string",
+                "example": "West Hollywood",
+                "x-nullable": true
+              },
+              "group_id": {
+                "type": "integer",
+                "example": 20
+              },
+              "description": {
+                "type": "string",
+                "example": "cool group",
+                "x-nullable": true
+              },
+              "title": {
+                "type": "string",
+                "example": "http://www.example.com",
+                "x-nullable": true
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Activity updated",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer",
+                  "example": 20
+                },
+                "lat": {
+                  "type": "string",
+                  "example": "johann@baton.com",
+                  "x-nullable": true
+                },
+                "long": {
+                  "type": "string",
+                  "example": "johann",
+                  "x-nullable": true
+                },
+                "additional_info": {
+                  "type": "string",
+                  "example": "johann",
+                  "x-nullable": true
+                },
+                "location": {
+                  "type": "string",
+                  "example": "West Hollywood",
+                  "x-nullable": true
+                },
+                "start_date": {
+                  "type": "string",
+                  "example": "West Hollywood",
+                  "x-nullable": true
+                },
+                "end_date": {
+                  "type": "string",
+                  "example": "West Hollywood",
+                  "x-nullable": true
+                },
+                "group_id": {
+                  "type": "integer",
+                  "example": 20
+                },
+                "description": {
+                  "type": "string",
+                  "example": "cool group",
+                  "x-nullable": true
+                },
+                "title": {
+                  "type": "string",
+                  "example": "http://www.example.com",
+                  "x-nullable": true
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/groups": {
       "get": {
         "summary": "Get all the groups",
